--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "ie-shim": "^0.1.0",
     "lodash": "^4.17.4",
     "ng2-select": "^1.2.0",
+    "ng2-simple-global": "^1.2.4",
     "primeng": "^4.1.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "~5.0.2",
